FOLREL-719: Update to mod-pubsub Java 21